add logout to swagger
